--- a/package.json
+++ b/package.json
@@ -1,38 +1,59 @@
 {
-  "name": "rapid-theme-website",
+  "name": "beautiful-design",
   "version": "1.0.0",
   "description": "",
   "contributors": [
-    {
-      "name": "João Mosmann"
-    },
     {
       "name": "Tony Nikolov"
     }
   ],
   "scripts": {
     "compile": "webpack -p",
-    "dev": "webpack-dev-server --hot"
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --hot --no-info --history-api-fallback",
+    "dev:server": "cross-env NODE_ENV=development PORT=3001 nodemon server/server.js",
+    "dev": "concurrently -r \"npm run dev:client\" \"npm run dev:server\""
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/body-parser": "^1.16.3",
+    "@types/express": "^4.0.35",
+    "@types/mongoose": "^4.7.11",
     "@types/react": "^15.0.20",
     "@types/react-dom": "^0.14.23",
     "@types/react-redux": "^4.4.40",
     "@types/react-router": "^4.0.6",
     "@types/react-router-redux": "next",
     "@types/redux": "^3.6.0",
+    "@types/redux-form": "^6.6.2",
+    "@types/redux-logger": "^3.0.0",
+    "@types/request": "^0.0.43",
+    "@types/request-promise": "^4.1.33",
+    "axios": "^0.16.1",
+    "body-parser": "^1.17.1",
+    "concurrently": "^3.4.0",
+    "cross-env": "^4.0.0",
+    "express": "^4.15.2",
+    "mongoose": "^4.9.7",
+    "net-ping": "^1.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-redux": "next",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-form": "^6.6.3",
+    "redux-logger": "^3.0.1",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
+    "skeleton-css": "^2.0.4",
+    "webshot": "^0.18.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.1.2",
     "css-loader": "^0.27.3",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
+    "nodemon": "^1.11.0",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.16.1",
