--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-form": "^6.6.2",
     "@types/redux-logger": "^3.0.0",
+    "@types/redux-thunk": "^2.1.0",
     "@types/request": "^0.0.43",
     "@types/request-promise": "^4.1.33",
     "axios": "^0.16.1",
@@ -43,6 +44,7 @@
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
     "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "skeleton-css": "^2.0.4",
@@ -57,7 +59,7 @@
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.16.1",
-    "typescript": "^2.2.2",
+    "typescript": "^2.3.2",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   }
