--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-redux": "next",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
+    "redux-infinite-scroll": "^1.0.9",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
