--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^0.14.23",
     "@types/react-redux": "^4.4.40",
     "@types/react-router": "^4.0.6",
+    "@types/react-router-dom": "^4.0.4",
     "@types/react-router-redux": "next",
     "@types/redux": "^3.6.0",
     "@types/redux-form": "^6.6.2",
@@ -40,6 +41,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
