- Added notification library.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mongoose": "^4.7.11",
     "@types/react": "^15.0.20",
     "@types/react-dom": "^0.14.23",
+    "@types/react-notification-system-redux": "^1.0.2",
     "@types/react-redux": "^4.4.40",
     "@types/react-router": "^4.0.6",
     "@types/react-router-dom": "^4.0.4",
@@ -39,6 +40,7 @@
     "net-ping": "^1.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-notification-system-redux": "^1.1.2",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
